--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^7.1.0-alpha.4",
     "react-scripts": "3.0.0",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "typescript": "3.4.5"
   },
   "scripts": {
