--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@types/react": "16.8.16",
     "@types/react-dom": "16.8.4",
     "@types/react-redux": "^7.0.8",
+    "@types/react-router-dom": "^4.3.2",
     "antd": "^3.16.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0-alpha.4",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
